--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Tic-Tac-Toe</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main_page">MainPage</string>
+    <string name="title_activity_help_page">HelpPage</string>
+    <string name="title_activity_about_page">AboutPage</string>
+    <string name="title_activity_doubleplayer_page">DoublePlayerPage</string>
 </resources>
